# derp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_ASSESSMENT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  drizzle.config.ts  env.example  package.json  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
dbschema/: default.gel
dbschema/migrations/: 00001-m12mr7h.edgeql  00002-m1qos4f.edgeql  00003-m15hcku.edgeql  00004-m1p253u.edgeql  00005-m1ugbeh.edgeql
deploy/: README.md  setup-server.sh
deploy/postgres/: README.md  backup.sh  create-db.sh  install.sh  pg-backup-monthly.service  pg-backup-monthly.timer  pg-backup-weekly.service  pg-backup-weekly.timer  pg-backup.service  pg-backup.timer  restore.sh
derp/: __main__.py  config.py
derp/common/: audio.py  cache_manager.py  database.py  executor.py  extractor.py  llm_gemini.py  message_log.py  meta.py  retry.py  sanitize.py  sender.py  tg.py  update_context.py  utils.py
derp/credits/: __init__.py  models.py  packs.py  service.py  tools.py  types.py  ui.py
derp/db/: __init__.py  credits.py  queries.py  session.py
derp/filters/: __init__.py  derp_mention.py
derp/handlers/: __init__.py  ai_response.py  basic.py  chat.py  chat_settings.py  credit_cmds.py  debug.py  donations.py  gemini.py  gemini_image.py  gemini_inline.py  image.py  inline.py  payments.py  think.py  tts.py  video.py  webapp.py
derp/llm/: __init__.py  agents.py  deps.py  prompts.py  providers.py  result.py
derp/locales/: README.md  messages.pot
derp/middlewares/: __init__.py  api_persist.py  api_resilient.py  chat_settings.py  credit_service.py  database_logger.py  db_models.py  event_context.py  log_updates.py  sender.py
derp/models/: __init__.py  base.py  chat.py  credit_transaction.py  daily_usage.py  message.py  user.py
derp/tools/: tts.py  (+14 more)
docs/: PRD.md
drizzle/: 0000_red_invisible_woman.sql  0001_foundation_indexes.sql
migrations/: env.py  script.py.mako
prd/: 01-vision-architecture.md  02-monetization-data.md  03-implementation.md
scripts/: gel_codegen.sh  i18n_compile.sh  i18n_extract.sh  i18n_init.sh  i18n_update.sh
src/: config.ts  index.ts
tests/: conftest.py  test_ai_response.py  test_audio.py  test_basic_handlers.py  test_credit_guardrails.py  test_db_queries.py  test_donations.py  test_extractor.py  test_filter.py  test_handlers_chat.py  test_handlers_chat_settings.py  test_handlers_credit_cmds.py  test_handlers_debug.py  test_handlers_image.py  test_handlers_inline.py  test_handlers_payments.py  test_handlers_think.py  test_handlers_tts.py  test_handlers_video.py  test_meta_filter.py  test_middlewares.py  test_middlewares_api_persist.py  test_middlewares_api_resilient.py  test_middlewares_database_logger.py  test_middlewares_log_updates.py  test_models.py  test_sanitize.py  test_sender.py  test_tg.py  test_utils.py
(+124 files in other folders)
